data/derived/fa15/progs/unify/prog3120.ml.out
Characters 109-119:
  else additivePersistence (digits n);;
                           ^^^^^^^^^^
Error: This expression has type int list
       but an expression was expected of type int
